# ros2-autonomous-navigation

./: LABGROUP.md  README.md
control_barrel_world/: CMakeLists.txt  package.xml
control_barrel_world/include/control_barrel_world/: control_barrel_world.hpp
control_barrel_world/launch/: solution.launch.xml
control_barrel_world/src/: callbacks.cpp  control_barrel_world.cpp  main.cpp  node.cpp
pcl_obstacle_detector/: CMakeLists.txt  package.xml
pcl_obstacle_detector/include/pcl_obstacle_detector/: pcl_obstacle_detector.hpp
pcl_obstacle_detector/src/: callbacks.cpp  main.cpp  node.cpp  pcl_obstacle_detector.cpp  proc.cpp
