<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_obstacle_detector</name>
  <version>0.0.0</version>
  <description>Contains node to create 3D bounding boxes of all cones/barrels in the LiDAR pointcloud using PCL.</description>
  <maintainer email="G.FernandezNespralVaz-1@student.tudelft.nl">Gonçalo Fernández-Nespral Vaz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>mirte_msgs</depend>
  <depend>std_msgs</depend>  
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
